--- a/Organize.InMemoryStorage/Organize.InMemoryStorage.csproj
+++ b/Organize.InMemoryStorage/Organize.InMemoryStorage.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Organize.Shared\Organize.Shared.csproj" />
   </ItemGroup>
 
