--- a/Organize.WASM/Organize.WASM.csproj
+++ b/Organize.WASM/Organize.WASM.csproj
@@ -14,20 +14,26 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
+    <PackageReference Include="Blazored.Modal" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GeneralUi\GeneralUi.csproj" />
     <ProjectReference Include="..\Organize.Business\Organize.Business.csproj" />
     <ProjectReference Include="..\Organize.DataAccess\Organize.DataAccess.csproj" />
+    <ProjectReference Include="..\Organize.IndexedDB\Organize.IndexedDB.csproj" />
     <ProjectReference Include="..\Organize.InMemoryStorage\Organize.InMemoryStorage.csproj" />
     <ProjectReference Include="..\Organize.Shared\Organize.Shared.csproj" />
     <ProjectReference Include="..\Organize.TestFake\Organize.TestFake.csproj" />
+    <ProjectReference Include="..\Organize.WebAPIAccess\Organize.WebAPIAccess.csproj" />
   </ItemGroup>
 
 </Project>
